<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_message" />
    <EditText android:id="@+id/edit_message2"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_message2" />
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb_female"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/suma"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/resta"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"/>
        <RadioButton
            android:id="@+id/multiplicacion"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"/>
        <RadioButton
            android:id="@+id/division"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>
</LinearLayout>
